basic tree functionality working

--- a/example/run_wright_fisher_simulation.ipynb
+++ b/example/run_wright_fisher_simulation.ipynb
@@ -339,14 +339,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "e0765ec5-6894-4945-84c1-e21fd2c4bbd4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8010087aa471478f9746455116b5c751",
+       "model_id": "288736ea8dfe4b64a7ca339aad542d9b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,6 +356,32 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/harmsm/miniconda3/lib/python3.9/site-packages/numpy/core/fromnumeric.py:86: RuntimeWarning: overflow encountered in reduce\n",
+      "  return ufunc.reduce(obj, axis, dtype, out, **passkwargs)\n",
+      "/Users/harmsm/work/programming/git-clones/eee/eee/ensemble.py:386: RuntimeWarning: invalid value encountered in divide\n",
+      "  out[\"fx_obs\"] = numerator/(denominator + numerator)\n",
+      "/Users/harmsm/work/programming/git-clones/eee/eee/ensemble.py:387: RuntimeWarning: invalid value encountered in divide\n",
+      "  out[\"dG_obs\"] = 1/beta*np.log(numerator/denominator)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "probabilities contain NaN",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m gc, generations \u001b[38;5;241m=\u001b[39m \u001b[43meee\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mevolve\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msimulate_evolution\u001b[49m\u001b[43m(\u001b[49m\u001b[43mens\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mens\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m                                                        \u001b[49m\u001b[43mddg_df\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mddg_df\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m                                                        \u001b[49m\u001b[43mmu_dict\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43miptg\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m                                                        \u001b[49m\u001b[43mfitness_fcns\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43meee\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mevolve\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mff_off\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m                                                                      \u001b[49m\u001b[43meee\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mevolve\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mff_off\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m                                                        \u001b[49m\u001b[43mselect_on\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mfx_obs\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m                                                        \u001b[49m\u001b[43mpopulation_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m                                                        \u001b[49m\u001b[43mmutation_rate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.01\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m                                                        \u001b[49m\u001b[43mnum_generations\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/work/programming/git-clones/eee/eee/evolve/simulate_evolution.py:161\u001b[0m, in \u001b[0;36msimulate_evolution\u001b[0;34m(ens, ddg_df, mu_dict, fitness_fcns, select_on, fitness_kwargs, T, population_size, mutation_rate, num_generations)\u001b[0m\n\u001b[1;32m    157\u001b[0m gc \u001b[38;5;241m=\u001b[39m GenotypeContainer(fc\u001b[38;5;241m=\u001b[39mfc,\n\u001b[1;32m    158\u001b[0m                        ddg_df\u001b[38;5;241m=\u001b[39mddg_df)\n\u001b[1;32m    160\u001b[0m \u001b[38;5;66;03m# Run and return a Wright Fisher simulation.\u001b[39;00m\n\u001b[0;32m--> 161\u001b[0m gc, generations \u001b[38;5;241m=\u001b[39m  \u001b[43mwright_fisher\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgc\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgc\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    162\u001b[0m \u001b[43m                                 \u001b[49m\u001b[43mpopulation\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpopulation_size\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    163\u001b[0m \u001b[43m                                 \u001b[49m\u001b[43mmutation_rate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmutation_rate\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    164\u001b[0m \u001b[43m                                 \u001b[49m\u001b[43mnum_generations\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_generations\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    166\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m gc, generations\n",
+      "File \u001b[0;32m~/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:126\u001b[0m, in \u001b[0;36mwright_fisher\u001b[0;34m(gc, population, mutation_rate, num_generations)\u001b[0m\n\u001b[1;32m    123\u001b[0m prob \u001b[38;5;241m=\u001b[39m prob\u001b[38;5;241m/\u001b[39mnp\u001b[38;5;241m.\u001b[39msum(prob)\n\u001b[1;32m    125\u001b[0m \u001b[38;5;66;03m# Select offspring, with replacement weighted by prob\u001b[39;00m\n\u001b[0;32m--> 126\u001b[0m population \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchoice\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcurrent_genotypes\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    127\u001b[0m \u001b[43m                              \u001b[49m\u001b[43msize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpopulation_size\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    128\u001b[0m \u001b[43m                              \u001b[49m\u001b[43mp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mprob\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    129\u001b[0m \u001b[43m                              \u001b[49m\u001b[43mreplace\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m    131\u001b[0m \u001b[38;5;66;03m# Introduce mutations\u001b[39;00m\n\u001b[1;32m    132\u001b[0m num_to_mutate \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mpoisson(expected_num_mutations)\n",
+      "File \u001b[0;32mmtrand.pyx:935\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: probabilities contain NaN"
+     ]
     }
    ],
    "source": [
