treat branch lengths better

--- a/example/simulate_on_tree.ipynb
+++ b/example/simulate_on_tree.ipynb
@@ -269,7 +269,7 @@
      "text": [
       "Help on function simulate_tree in module eee.evolve.simulate_tree:\n",
       "\n",
-      "simulate_tree(ens, ddg_df, mu_dict, fitness_fcns, newick, select_on='fx_obs', fitness_kwargs={}, T=298.15, population_size=1000, mutation_rate=0.01, burn_in_generations=10)\n",
+      "simulate_tree(ens, ddg_df, mu_dict, fitness_fcns, newick, select_on='fx_obs', fitness_kwargs={}, T=298.15, population_size=1000, mutation_rate=0.01, num_generations=100, burn_in_generations=10)\n",
       "\n"
      ]
     }
@@ -293,9 +293,80 @@
    "execution_count": null,
    "id": "e0765ec5-6894-4945-84c1-e21fd2c4bbd4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7f71b844bb39408b8399e467964723a9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/9 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9df2dc6b50a84dc3b9c109ea3b33ee56",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/99999 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9cb51f690f3047cf8054d9102ffe7499",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/99999 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4cc5106654e944a9aa59c5d22ca5ede1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/99999 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ec9b57e88ca8411e9090ced03c0707b9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/99999 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "newick = '((A:10,B:5):5,(C:3,D:7):3);'\n",
+    "newick = '((A:0.1,B:0.5):0.5,(C:0.3,D:0.7):0.3);'\n",
     "\n",
     "gc, tree = eee.evolve.simulate_tree(ens=ens,\n",
     "                                 ddg_df=ddg_df,\n",
@@ -305,7 +376,8 @@
     "                                 newick=newick,\n",
     "                                 select_on=\"fx_obs\",\n",
     "                                 population_size=1000,\n",
-    "                                 mutation_rate=0.01,\n",
+    "                                 mutation_rate=0.001,\n",
+    "                                 num_generations=100000,\n",
     "                                 burn_in_generations=10)"
    ]
   },
@@ -316,7 +388,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eee.analysis.extract_alignment(gc,tree)"
+    "alignment, tree = eee.evolve.extract_alignment(gc,tree,include_ancestors=True)\n",
+    "for a in alignment:\n",
+    "    print(a,alignment[a])"
    ]
   },
   {
