tree simulation engine complete, no tests

--- a/example/simulate_on_tree.ipynb
+++ b/example/simulate_on_tree.ipynb
@@ -290,75 +290,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e0765ec5-6894-4945-84c1-e21fd2c4bbd4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f71b844bb39408b8399e467964723a9",
+       "model_id": "6d77b32ff6384f27ac7d9cf9d89ccc4d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/9 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9df2dc6b50a84dc3b9c109ea3b33ee56",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/99999 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9cb51f690f3047cf8054d9102ffe7499",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/99999 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4cc5106654e944a9aa59c5d22ca5ede1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/99999 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec9b57e88ca8411e9090ced03c0707b9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/99999 [00:00<?, ?it/s]"
+       "  0%|          | 0/7 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -377,189 +321,35 @@
     "                                 select_on=\"fx_obs\",\n",
     "                                 population_size=1000,\n",
     "                                 mutation_rate=0.001,\n",
-    "                                 num_generations=100000,\n",
+    "                                 num_generations=10000,\n",
     "                                 burn_in_generations=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2f3fd7bb-6f47-420b-b131-020211fd6636",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "anc0 LNIG\n",
+      "anc1 MNDG\n",
+      "anc2 LNIF\n",
+      "A MNDG\n",
+      "B RNDG\n",
+      "C LQIK\n",
+      "D DSGW\n"
+     ]
+    }
+   ],
    "source": [
     "alignment, tree = eee.evolve.extract_alignment(gc,tree,include_ancestors=True)\n",
     "for a in alignment:\n",
     "    print(a,alignment[a])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1340c009-8d16-4a64-bd57-098361fe9f6f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_most_common(some_dict):\n",
-    "    \"\"\"\n",
-    "    Return key/value pair where value is highest.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    keys = list(some_dict.keys())\n",
-    "    values = [some_dict[k] for k in keys]\n",
-    "    to_sort = list(zip(values,keys))\n",
-    "    to_sort.sort()\n",
-    "    \n",
-    "    return to_sort[-1][1], to_sort[-1][0]\n",
-    "\n",
-    "def extract_alignment(gc,tree,include_ancestors=False):\n",
-    "\n",
-    "    # Get wildtype sequence\n",
-    "    wt_seq = list(gc.wt_sequence)\n",
-    "\n",
-    "    out = {}\n",
-    "    counter = 0\n",
-    "    \n",
-    "    # Go through tree\n",
-    "    for n in tree.traverse():\n",
-    "\n",
-    "        # If a leaf (or we are including ancestors)...\n",
-    "        if n.is_leaf() or include_ancestors:\n",
-    "\n",
-    "            # Give ancestor name to unlabeled nodes\n",
-    "            if n.name == \"\":\n",
-    "                n.name = f\"anc{counter}\"\n",
-    "                counter += 1\n",
-    "\n",
-    "            # Start with wildtype sequence\n",
-    "            this_seq = wt_seq[:]\n",
-    "\n",
-    "            # Get most common genotype in the last generation\n",
-    "            genotype, count = get_most_common(n.generations[-1])\n",
-    "\n",
-    "            # Update this_seq with the mutations present in that genotype\n",
-    "            for m in gc.genotypes[genotype].mutations:\n",
-    "                idx = int(m[1:-1]) - 1\n",
-    "                aa = m[-1]\n",
-    "                this_seq[idx] = aa\n",
-    "\n",
-    "            # Update output\n",
-    "            out[n.name] = \"\".join(this_seq)\n",
-    "\n",
-    "    return out, tree\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4880d3f9-0340-44a1-a38c-70a55d5d876d",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Extract gentoype frequencies from the simulation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d6a6ff0-4de2-4404-a06d-3d587be73921",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = eee.evolve.get_genotype_frequencies(generations)\n",
-    "gen = np.arange(len(generations))\n",
-    "for x in df.columns:\n",
-    "    plt.plot(gen,df[x],'-')    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ef12899-cafd-45ec-9509-df9df96fe741",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Look for a genotype that becomes the most common genotype that is not \n",
-    "# wt (0)\n",
-    "for generation in generations:\n",
-    "    genotypes = list(generation.keys())\n",
-    "    \n",
-    "    pops = []\n",
-    "    for g in genotypes:\n",
-    "        pops.append(generation[g])\n",
-    "    \n",
-    "    idx = np.argmax(pops)\n",
-    "    if genotypes[idx] != 0:\n",
-    "        mut_idx = genotypes[idx]\n",
-    "        break\n",
-    "        \n",
-    "\n",
-    "wt_pop = []\n",
-    "mut_pop = []\n",
-    "for i, generation in enumerate(generations):\n",
-    "\n",
-    "    try:\n",
-    "        wt_pop.append(generation[0])\n",
-    "    except KeyError:\n",
-    "        wt_pop.append(0)\n",
-    "        \n",
-    "    try:\n",
-    "        mut_pop.append(generation[mut_idx])\n",
-    "    except KeyError:\n",
-    "        mut_pop.append(0)\n",
-    "        \n",
-    "fig, ax = plt.subplots(1,figsize=(6,6))\n",
-    "ax.plot(np.arange(len(wt_pop)),wt_pop,'-',color=\"black\",lw=2,label=\"wt\")\n",
-    "ax.plot(np.arange(len(mut_pop)),mut_pop,'-',lw=1,label=\"/\".join(gc.genotypes[mut_idx].mutations))\n",
-    "ax.set_xlabel(\"generation\")\n",
-    "ax.set_ylabel(\"population\")\n",
-    "ax.set_title(\"population of wt and mutant over generations\")\n",
-    "ax.legend()   \n",
-    "plt.show()\n",
-    "        \n",
-    "        \n",
-    "\n",
-    "        \n",
-    "fig, ax = plt.subplots(1,figsize=(6,6))\n",
-    "\n",
-    "df = ens.get_obs(mu_dict={\"iptg\":np.linspace(-10,5)})\n",
-    "ax.plot(df.iptg,df.fx_obs,label=\"wt\",color='black',lw=2)\n",
-    "\n",
-    "mut_df = ens.get_obs(mut_energy=gc.genotypes[mut_idx].mut_energy,\n",
-    "                     mu_dict={\"iptg\":np.linspace(-10,5)})\n",
-    "ax.plot(mut_df.iptg,\n",
-    "        mut_df.fx_obs,\n",
-    "        '-',\n",
-    "        lw=1,\n",
-    "        label=\"/\".join(gc.genotypes[mut_idx].mutations))\n",
-    "ax.set_xlabel(\"iptg chemical potential\")\n",
-    "ax.set_ylabel(\"fraction hdna\")\n",
-    "ax.set_title(\"new mutant response to IPTG\")\n",
-    "\n",
-    "ax.plot((-1,-1),(0,1),'--',color='gray')\n",
-    "ax.plot((-4,-4),(0,1),'--',color='gray')\n",
-    "ax.legend()   \n",
-    "None\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83758fd3-f432-4d3b-8ae6-158d600c4513",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3dd40ef1-f2d7-4981-b0e3-a651ab1f62a8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
