test and variable check refactor

--- a/example/simulate_on_tree.ipynb
+++ b/example/simulate_on_tree.ipynb
@@ -290,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "e0765ec5-6894-4945-84c1-e21fd2c4bbd4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d77b32ff6384f27ac7d9cf9d89ccc4d",
+       "model_id": "05bfcc70430144e18b642d8d9af2ac19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -320,14 +320,14 @@
     "                                 newick=newick,\n",
     "                                 select_on=\"fx_obs\",\n",
     "                                 population_size=1000,\n",
-    "                                 mutation_rate=0.001,\n",
-    "                                 num_generations=10000,\n",
+    "                                 mutation_rate=0.0001,\n",
+    "                                 num_generations=100000,\n",
     "                                 burn_in_generations=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "2f3fd7bb-6f47-420b-b131-020211fd6636",
    "metadata": {},
    "outputs": [
@@ -335,13 +335,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "anc0 LNIG\n",
-      "anc1 MNDG\n",
-      "anc2 LNIF\n",
-      "A MNDG\n",
-      "B RNDG\n",
-      "C LQIK\n",
-      "D DSGW\n"
+      "anc0 LLIG\n",
+      "anc1 TNIG\n",
+      "anc2 LLIA\n",
+      "A TNIG\n",
+      "B DNDG\n",
+      "C LLGA\n",
+      "D VYIW\n"
      ]
     }
    ],
@@ -355,6 +355,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "955dd76a-1f78-4065-b115-922bb71a6b6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49bc3b89-0eeb-42e6-965d-0adaf158c8fa",
    "metadata": {},
    "outputs": [],
    "source": []
