--- a/example/simulate_on_tree.ipynb
+++ b/example/simulate_on_tree.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "73931919-f875-40fb-ae30-5e0cafbc296c",
    "metadata": {},
    "outputs": [
@@ -237,13 +237,13 @@
        "[80 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ddg_df = eee.io.load_ddg(\"../tests/data/test_ddg/ddg.csv\")\n",
+    "ddg_df = eee.io.load_ddg(\"../tests/data_for_tests/test_ddg/ddg.csv\")\n",
     "ddg_df"
    ]
   },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "83448fb5-1fc7-4041-a58d-074d3f172abe",
    "metadata": {},
    "outputs": [
@@ -290,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e0765ec5-6894-4945-84c1-e21fd2c4bbd4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "529b4702a9594b40888ecc0ae6b65e9d",
+       "model_id": "887d45cd07064b62bdda04f66705922e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2f3fd7bb-6f47-420b-b131-020211fd6636",
    "metadata": {},
    "outputs": [
@@ -335,13 +335,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "anc0 LLIG\n",
-      "anc1 LDMG\n",
-      "anc2 LDIG\n",
-      "A LDMG\n",
-      "B NDMG\n",
-      "C LCIG\n",
-      "D DDRG\n"
+      "anc0 TLIG\n",
+      "anc1 TLQG\n",
+      "anc2 TLAG\n",
+      "A TLQG\n",
+      "B TLQG\n",
+      "C TLQG\n",
+      "D TLQG\n"
      ]
     }
    ],
