tests for load_ddg, read_dataframe, genotype

--- a/example/simulate_on_tree.ipynb
+++ b/example/simulate_on_tree.ipynb
@@ -107,59 +107,53 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>site</th>\n",
        "      <th>mut</th>\n",
        "      <th>hdna</th>\n",
        "      <th>h</th>\n",
        "      <th>l2e</th>\n",
-       "      <th>site</th>\n",
-       "      <th>is_wt</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>L1A</td>\n",
        "      <td>6.778</td>\n",
        "      <td>7.941</td>\n",
        "      <td>4.4385</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>L1C</td>\n",
        "      <td>8.147</td>\n",
        "      <td>11.205</td>\n",
        "      <td>7.6000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>1</td>\n",
        "      <td>L1D</td>\n",
        "      <td>-0.234</td>\n",
        "      <td>1.073</td>\n",
        "      <td>3.2910</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>1</td>\n",
        "      <td>L1E</td>\n",
        "      <td>7.648</td>\n",
        "      <td>8.496</td>\n",
        "      <td>4.2360</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>1</td>\n",
        "      <td>L1F</td>\n",
        "      <td>1.447</td>\n",
        "      <td>4.023</td>\n",
        "      <td>-0.4560</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -168,73 +162,67 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75</th>\n",
+       "      <td>4</td>\n",
        "      <td>G4S</td>\n",
        "      <td>15.472</td>\n",
        "      <td>35.673</td>\n",
        "      <td>20.0280</td>\n",
-       "      <td>4</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>76</th>\n",
+       "      <td>4</td>\n",
        "      <td>G4T</td>\n",
        "      <td>15.428</td>\n",
        "      <td>43.397</td>\n",
        "      <td>36.3300</td>\n",
-       "      <td>4</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>77</th>\n",
+       "      <td>4</td>\n",
        "      <td>G4V</td>\n",
        "      <td>24.131</td>\n",
        "      <td>39.590</td>\n",
        "      <td>45.7680</td>\n",
-       "      <td>4</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>78</th>\n",
+       "      <td>4</td>\n",
        "      <td>G4W</td>\n",
        "      <td>79.753</td>\n",
        "      <td>96.205</td>\n",
        "      <td>46.9070</td>\n",
-       "      <td>4</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>79</th>\n",
+       "      <td>4</td>\n",
        "      <td>G4Y</td>\n",
        "      <td>52.324</td>\n",
        "      <td>80.409</td>\n",
        "      <td>33.1140</td>\n",
-       "      <td>4</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>80 rows × 6 columns</p>\n",
+       "<p>76 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    mut    hdna       h      l2e  site  is_wt\n",
-       "0   L1A   6.778   7.941   4.4385     1  False\n",
-       "1   L1C   8.147  11.205   7.6000     1  False\n",
-       "2   L1D  -0.234   1.073   3.2910     1  False\n",
-       "3   L1E   7.648   8.496   4.2360     1  False\n",
-       "4   L1F   1.447   4.023  -0.4560     1  False\n",
-       "..  ...     ...     ...      ...   ...    ...\n",
-       "75  G4S  15.472  35.673  20.0280     4  False\n",
-       "76  G4T  15.428  43.397  36.3300     4  False\n",
-       "77  G4V  24.131  39.590  45.7680     4  False\n",
-       "78  G4W  79.753  96.205  46.9070     4  False\n",
-       "79  G4Y  52.324  80.409  33.1140     4  False\n",
+       "    site  mut    hdna       h      l2e\n",
+       "0      1  L1A   6.778   7.941   4.4385\n",
+       "1      1  L1C   8.147  11.205   7.6000\n",
+       "2      1  L1D  -0.234   1.073   3.2910\n",
+       "3      1  L1E   7.648   8.496   4.2360\n",
+       "4      1  L1F   1.447   4.023  -0.4560\n",
+       "..   ...  ...     ...     ...      ...\n",
+       "75     4  G4S  15.472  35.673  20.0280\n",
+       "76     4  G4T  15.428  43.397  36.3300\n",
+       "77     4  G4V  24.131  39.590  45.7680\n",
+       "78     4  G4W  79.753  96.205  46.9070\n",
+       "79     4  G4Y  52.324  80.409  33.1140\n",
        "\n",
-       "[80 rows x 6 columns]"
+       "[76 rows x 5 columns]"
       ]
      },
      "execution_count": 3,
@@ -290,14 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "e0765ec5-6894-4945-84c1-e21fd2c4bbd4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "887d45cd07064b62bdda04f66705922e",
+       "model_id": "2c9d83c115884a5a916f724566ba5c1a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -307,6 +295,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:208: UserWarning: \n",
+      "\n",
+      "Did not accumulate requested number of mutations after 1000\n",
+      "generations. Accumulated 5 of 7 requested.\n",
+      "Try increasing num_generations and/or mutation_rate.\n",
+      "\n",
+      "\n",
+      "  warnings.warn(w)\n"
+     ]
     }
    ],
    "source": [
@@ -320,14 +322,14 @@
     "                                 newick=newick,\n",
     "                                 select_on=\"fx_obs\",\n",
     "                                 population_size=1000,\n",
-    "                                 mutation_rate=0.001,\n",
-    "                                 num_generations=100000,\n",
+    "                                 mutation_rate=0.01,\n",
+    "                                 num_generations=1000,\n",
     "                                 burn_in_generations=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "2f3fd7bb-6f47-420b-b131-020211fd6636",
    "metadata": {},
    "outputs": [
@@ -335,13 +337,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "anc0 TLIG\n",
-      "anc1 TLQG\n",
-      "anc2 TLAG\n",
-      "A TLQG\n",
-      "B TLQG\n",
-      "C TLQG\n",
-      "D TLQG\n"
+      "anc0 LDCG\n",
+      "anc1 DDCK\n",
+      "anc2 LDAG\n",
+      "A DDCK\n",
+      "B DDCK\n",
+      "C DCCG\n",
+      "D LDQK\n"
      ]
     }
    ],
