wright_fisher tests in place

--- a/example/simulate_on_tree.ipynb
+++ b/example/simulate_on_tree.ipynb
@@ -278,14 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "e0765ec5-6894-4945-84c1-e21fd2c4bbd4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c9d83c115884a5a916f724566ba5c1a",
+       "model_id": "3646fda95ab84eeca5f7c5e8ab5aad36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -300,10 +300,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:208: UserWarning: \n",
+      "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:219: UserWarning: \n",
       "\n",
       "Did not accumulate requested number of mutations after 1000\n",
       "generations. Accumulated 5 of 7 requested.\n",
+      "Try increasing num_generations and/or mutation_rate.\n",
+      "\n",
+      "\n",
+      "  warnings.warn(w)\n",
+      "/Users/harmsm/work/programming/git-clones/eee/eee/evolve/wright_fisher.py:219: UserWarning: \n",
+      "\n",
+      "Did not accumulate requested number of mutations after 1000\n",
+      "generations. Accumulated 5 of 6 requested.\n",
       "Try increasing num_generations and/or mutation_rate.\n",
       "\n",
       "\n",
@@ -329,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "2f3fd7bb-6f47-420b-b131-020211fd6636",
    "metadata": {},
    "outputs": [
@@ -337,13 +345,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "anc0 LDCG\n",
-      "anc1 DDCK\n",
-      "anc2 LDAG\n",
-      "A DDCK\n",
-      "B DDCK\n",
-      "C DCCG\n",
-      "D LDQK\n"
+      "anc0 LCCG\n",
+      "anc1 DCAK\n",
+      "anc2 DCCG\n",
+      "A DCAK\n",
+      "B DCAK\n",
+      "C DCCK\n",
+      "D DDCK\n"
      ]
     }
    ],
